--- a/sapipiru-rust/Cargo.toml
+++ b/sapipiru-rust/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 iced = "0.2"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+tokio = { version = "0.2", features = ["full"] }
+serde = { version = "1.0.114", features = ["derive"] }
+async-recursion = "0.3.1"
