--- a/sapipiru-rust/Cargo.toml
+++ b/sapipiru-rust/Cargo.toml
@@ -12,3 +12,4 @@ reqwest = { version = "0.10", features = ["blocking", "json"] }
 tokio = { version = "0.2", features = ["full"] }
 serde = { version = "1.0.114", features = ["derive"] }
 async-recursion = "0.3.1"
+lazy_static = "0.2.1"
